--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "lucide-react": "^0.468.0",
     "next": "15.3.4",
     "react": "^19",
-    "react-dom": "^19"
+    "react-dom": "^19",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
